--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,36 +2,21 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:id="@+id/relativelayout"
-    android:layout_height="wrap_content"
+    android:id="@+id/parent"
+    android:layout_height="match_parent"
     android:theme="@style/AppTheme"
     tools:context=".MainActivityTest">
+
     <ScrollView
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:id="@+id/scrollView"
-        >
+        android:id="@+id/scrollView">
         <RelativeLayout
             android:layout_width="fill_parent"
-            android:id="@+id/relativetest"
-            android:layout_height="wrap_content">
-            <Button
-                android:background="@drawable/round_button_confirm"
-                android:layout_width="100sp"
-                android:layout_height="50sp"
-                android:id="@+id/buttontest"
-                android:text="GO"
-                android:textSize="25sp"
-                android:textColor="#ffffff"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
-            </RelativeLayout>
-        </ScrollView>
+            android:id="@+id/relativelayout"
+            android:layout_height="wrap_content"/>
+    </ScrollView>
     <fragment
         android:name="thomasave.mastermind.AdFragment"
         android:id="@+id/ad_fragment"
